{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 592,
  "lineage": "cef1b383-b805-17e3-da16-183f676d7918",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:803716525692:listener/app/ecs-load-balancer/bae5b331ff6b4a6e/eb7f9631c86ba9be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:803716525692:targetgroup/Ec2-target-group/4dbbef1de611f1fa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:803716525692:listener/app/ecs-load-balancer/bae5b331ff6b4a6e/eb7f9631c86ba9be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:803716525692:loadbalancer/app/ecs-load-balancer/bae5b331ff6b4a6e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.ec2_tg",
            "aws_security_group.ecs-tp3-terraform-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance-tp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:803716525692:instance/i-0c5163864c7e1fa85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5163864c7e1fa85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06917b280240c51d4",
            "private_dns": "ip-192-168-0-93.ec2.internal",
            "private_ip": "192.168.0.93",
            "public_dns": "ec2-3-237-196-148.compute-1.amazonaws.com",
            "public_ip": "3.237.196.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093e5fb1a5a1ccb5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eed83afcca0870cd",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d951f85b459a6fc"
            ]
          },
          "dependencies": [
            "aws_security_group.ecs-tp3-terraform-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803716525692:internet-gateway/igw-08eade041aca39d91",
            "id": "igw-08eade041aca39d91",
            "owner_id": "803716525692",
            "tags": {
              "Name": "Internet-gateway"
            },
            "tags_all": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-0d72614502340f870"
          },
          "dependencies": [
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:803716525692:loadbalancer/app/ecs-load-balancer/bae5b331ff6b4a6e",
            "arn_suffix": "app/ecs-load-balancer/bae5b331ff6b4a6e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-load-balancer-517347214.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:803716525692:loadbalancer/app/ecs-load-balancer/bae5b331ff6b4a6e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-08d951f85b459a6fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bfbbeef6dd73e600"
              },
              {
                "subnet_id": "subnet-0eed83afcca0870cd"
              }
            ],
            "subnets": [
              "subnet-0bfbbeef6dd73e600",
              "subnet-0eed83afcca0870cd"
            ],
            "vpc_id": "vpc-0d72614502340f870",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecs-tp3-terraform-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:803716525692:targetgroup/Ec2-target-group/4dbbef1de611f1fa",
            "arn_suffix": "targetgroup/Ec2-target-group/4dbbef1de611f1fa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:803716525692:targetgroup/Ec2-target-group/4dbbef1de611f1fa",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Ec2-target-group",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d72614502340f870"
          },
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_security_group.ecs-tp3-terraform-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:803716525692:targetgroup/Ec2-target-group/4dbbef1de611f1fa-20211212030131177900000003",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:803716525692:targetgroup/Ec2-target-group/4dbbef1de611f1fa",
            "target_id": "i-0c5163864c7e1fa85"
          },
          "dependencies": [
            "aws_instance.ec2-instance-tp3",
            "aws_lb.load_balancer",
            "aws_lb_target_group.ec2_tg",
            "aws_security_group.ecs-tp3-terraform-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803716525692:route-table/rtb-050db8fea1228a8de",
            "id": "rtb-050db8fea1228a8de",
            "owner_id": "803716525692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eade041aca39d91",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eade041aca39d91",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-table"
            },
            "tags_all": {
              "Name": "Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d72614502340f870"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a4fd4f415a502d9",
            "route_table_id": "rtb-050db8fea1228a8de",
            "subnet_id": "subnet-0eed83afcca0870cd"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ab1dd4ed02370e4",
            "route_table_id": "rtb-050db8fea1228a8de",
            "subnet_id": "subnet-0bfbbeef6dd73e600"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-tp3-terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803716525692:security-group/sg-08d951f85b459a6fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d951f85b459a6fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211212025812306400000001",
            "name_prefix": "terraform-",
            "owner_id": "803716525692",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d72614502340f870"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803716525692:subnet/subnet-0eed83afcca0870cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.64/27",
            "id": "subnet-0eed83afcca0870cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803716525692",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0d72614502340f870"
          },
          "dependencies": [
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803716525692:subnet/subnet-0bfbbeef6dd73e600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.96/27",
            "id": "subnet-0bfbbeef6dd73e600",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803716525692",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0d72614502340f870"
          },
          "dependencies": [
            "aws_vpc.ecs-tp3-vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs-tp3-vpc-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803716525692:vpc/vpc-0d72614502340f870",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/25",
            "default_network_acl_id": "acl-06cec505fd1d68528",
            "default_route_table_id": "rtb-09849905d493b0ee1",
            "default_security_group_id": "sg-08274bbfb0fdbba10",
            "dhcp_options_id": "dopt-0f7dbe39d523b926c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d72614502340f870",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09849905d493b0ee1",
            "owner_id": "803716525692",
            "tags": {
              "Name": "Ecs-tp3-VPC-terraform"
            },
            "tags_all": {
              "Name": "Ecs-tp3-VPC-terraform"
            }
          }
        }
      ]
    }
  ]
}